<resources>
    <string name="app_name">Authentication Module</string>
    <string name="login_text">Login</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="sign_up_text">Do not have an account?<font color='#0039CB'> Sign up now! </font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name_hint">Name</string>
    <string name="phone_number_label">Phone number</string>
    <string name="create_account_label">Create Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="label_upload_image">Uploading image</string>
    <string name="logout_label">Logout</string>
    <string name="camera_text">Camera</string>
    <string name="gallery_text">Gallery</string>
</resources>
